--- a/index.html
+++ b/index.html
@@ -1,89 +1,89 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人介绍</title>
-    <link rel="stylesheet" href="css/style.css">
-
+	<title>楠格丨个人主页</title>
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name='description' content='楠格，楠格个人导航页，个人主页。'>
+	<meta name='keywords' content='楠格,楠格主页'>
+	<meta name='robots' content='index,follow'>
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
-<body>
-    <div id="bigbox">
-        <div id="banner">
-            <img src="picture/banner.png" alt="">
-        </div>
-        <nav>
-            <a class="dangqian" href="">首页</a>
-            <a href="duanwen.html">短文</a>
-            <a href="rizhi.html">日志</a>
-            <a href="liuyan.html">留言板</a>
-        </nav>
-        <div id="main">
-            <div id="main_left">
-                <h2>关于我</h2>
-                <img src="picture/me.png" alt="">
-                <p>
-                    <span>姓名</span>:*****<br>
-                    <span>性别</span>:男<br>
-                    <span>爱好</span>:听歌 踢足球 打游戏<br>
-                    <span>性格</span> :开朗<br>
-                    <span>家乡</span>:新疆乌恰县<br>
-                    <span>专业</span>:计算机网络技术
-                </p>
-            </div>
-            <div id="main_right">
-                <h2>热爱生活</h2>
-                <p>
-                    一、岁月从来不曾静好，只是有人在替你背负枷锁，含泪前行。也许是父母，也许是朋友，也许是陌生人……无论是谁，请记得常怀感恩之心。
-                </p>
-                <p>
-                    二、这个世界并不完美，甚至有点残酷。你无法决定下一段旅途遇见的是好事还是坏事，可你能决定面对它们的态度。你看这个世界的角度，决定了这个世界给你的温度。
-                </p>
-                <p>
-                    三、总会有一件事让你瞬间长大，也总会有一个人让你泪如雨下。愿你早日领教这个世界的深深恶意，让自己活得开心得意。
-                </p>
-                <p>
-                    四、想要与众不同，却总随遇而安，想要做很多未做的事，却在现实棘手的吃喝拉撒前低下了头，我们间歇性热血满腔，长时间迷茫犯懒，别等了，再努力试试看！
-                </p>
-                <img src="picture/life.png" alt="">
-            </div>
-        </div>
-        <div id="luxing">
-            <h2>旅行生活</h2>
-            <div>
-                <div id="picture">
-                    <img src="picture/11.png" alt="">
-                    <p>在日月潭</p>
-                </div>
-                <div id="picture">
-                    <img src="picture/22.png" alt="">
-                    <p>
-                        在毛里求斯
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="picture/33.png" alt="">
-                    <p>
-                        在马尔代夫
-                    </p>
-                </div>
-                <div id="picture">
-                    <img src="picture/44.png" alt="">
-                    <p>
-                        在玉龙雪山
-                    </p>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <p>
-                ddd
-            </p>
-        </footer>
-    </div>
+<body class="is-preload">
+	<div id="wrapper">
+		<div id="bg"></div>
+		<div id="overlay"></div>
+		<div id="main">
+
+			<!-- Header -->
+			<header id="header">
+				<h1>翠花</h1>
+				<p>&nbsp;&bull;&nbsp; 这家伙很懒，什么也没留下 &nbsp;&bull;&nbsp;</p>
+				<nav>
+					<ul>
+						<li><a href="http://www.nange.cn/" target="_blank" class="icon solid fa-blog" title="每天都是最好的自己。"><span
+									class="label">翠花</span></a></li>
+						<li><a href="http://cfp.qste.com/" target="_blank" rel="noopener" class="icon regular fa-layer-group"
+								title="云加速"><span class="label">云加速</span></a></li>
+						<li><a href="http://shop.nange.cn/" target="_blank" rel="noopener" class="icon light fa-store"
+								title="楠格小店，贩卖心情。"><span class="label">小店</span></a></li>
+<!-- 						<li><a href="http://chrome.nange.cn/" target="_blank" rel="noopener"
+								class="icon brands fa-chrome" title="Chrome 离线包下载"><span class="label">Chrome
+									离线包下载</span></a></li> -->
+						<li><a href="http://server.nange.cn/" target="_blank" rel="noopener" class="icon regular fa-server"
+								title="服务器探针"><span class="label">服务器探针</span></a></li>
+						<li><a href="http://status.nange.cn/" target="_blank" rel="noopener" class="icon brands fa-sellsy"
+								title="服务状态"><span class="label">服务状态</span></a></li>
+						<li><a href="http://weibo.com/234610510" target="_blank" rel="nofollow noopener"
+								class="icon brands fa-weibo" title="微博关注我"><span class="label">微博</span></a></li>
+						<li><a href="http://www.instagram.com/nange.cn/" target="_blank" rel="nofollow noopener"
+								class="icon brands fa-instagram" title="关注我的 Instagram"><span
+									class="label">Instagram</span></a></li>
+						<li><a href="http://t.me/SpecialHer" target="_blank" rel="nofollow noopener"
+								class="icon brands fa-telegram-plane" title="少女写真"><span
+									class="label">Telegram</span></a></li>
+						<li><a href="http://github.com/xOS" target="_blank" rel="nofollow noopener"
+								class="icon brands fa-github-alt" title="Fork me on Github"><span
+									class="label">Github</span></a></li>
+						<li><a href="http://twitter.com/SetNote/" target="_blank" rel="nofollow noopener"
+								class="icon brands fa-twitter" title="Twitter 关注我"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="mailto:home@nange.cn" target="_blank" rel="nofollow noopener" class="fa fa-envelope"
+								title="给我发邮件"><span class="label">Email</span></a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<span class="copyright">&copy; 2022 <a href="http://www.nange.cn/" target="_blank">楠格</a>丨<a
+						href="http://beian.miit.gov.cn/" target="_blank" rel="nofollow">京ICP备1000000号-1</a></span>
+			</footer>
+
+		</div>
+	</div>
+	<script>
+		window.onload = function () { document.body.classList.remove('is-preload'); }
+		window.ontouchmove = function () { return false; }
+		window.onorientationchange = function () { document.body.scrollTop = 0; }
+	</script>
+
+	<script>
+		console.log("%c%c楠格%chttp://www.nange.cn", "line-height:28px;", "line-height:28px;padding:4px;background:#2ccbe6;color:#FADFA3;font-size:14px;", "padding:4px 4px 4px 2px;background:#ff146d;color:green;line-height:28px;font-size:12px;");
+	</script>
+	<script disable-devtool-auto src='http://fastly.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'
+		disable-menu='false'></script>
 </body>
 
 </html>
